kubernetes/product-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
spec:
  selector:
    app: product
  ports:
  - port: 80
    targetPort: 5001
  type: NodePort
